<resources>
    <string name="app_name">Recycler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- chat string -->

    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>

    <!-- board string -->
    <string name="registerBtn"> 등록 </string>
    <string name="registerBoardName"> 게시글 등록 </string>
    <string name="registerStoreName"> 상품 판매 </string>
    <string name="registerTitle"> 제목 </string>
    <string name="registerContent"> 내용을 입력해주세요. </string>
    <string name="categoryButton"> 카테고리 설정 </string>
    <string name="imageButton"> 이미지 업로드 </string>
    <string name="priceButton"> 판매 가격 설정 </string>

    <!-- category list data -->
    <string name="카테고리"></string>
    <string-array name="category">
        <item> 기타제품 </item>
        <item> 리사이클 제품 </item>
        <item> 리사이클 공예품 </item>
        <item> 패트병 </item>
        <item> 플라스틱 </item>
        <item> 종이 및 책 </item>
        <item> 공병 및 유리병 </item>
        <item> 금속류 </item>
        <item> 가전기기 </item>
        <item> 유리 </item>
    </string-array>

    <string name="singin_to_continue"><u>혹시 회원이신가요?</u></string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="sign_in">로그인</string>
    <string name="create_new_account">회원가입</string>
    <string name="add_image">이미지 넣기</string>
    <string name="name">이름</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="sing_up">회원가입</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="recycler">리사이클러</string>
    <string name="sub_title">카피라이팅\n환영합니다!</string>
    <string name="auto_sign_in">자동 로그인</string>
    <string name="search_account">아이디 찾기</string>
    <string name="update_password">비밀번호 재설정</string>
    <string name="sns_sign_in">SNS 간편 로그인</string>
    <string name="nick_name">닉네임 | 3글자 이상, 16글자 이하</string>

    <!--  Facebook  -->
    <string name="facebook_app_id">835613990761642</string>
    <string name="fb_login_protocol_scheme">fb835613990761642</string>
    <string name="facebook_client_token">5103ca44345c564fa828b2f0ea0f7f23</string>
    <string name="home">홈</string>
    <string name="store">스토어</string>
    <string name="chat">채팅</string>
    <string name="community">커뮤니티</string>
    <string name="mypage">마이페이지</string>


>>>>>>> demian214
</resources>