<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/house_line_thin_icon_171708"
        android:title="@string/home" />

    <item android:id="@+id/store"
        android:enabled="true"
        android:icon="@drawable/tote_thin_icon_171461"
        android:title="@string/store" />

    <item android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/chats_circle_thin_icon_171895"
        android:title="@string/chat" />

    <item android:id="@+id/community"
        android:enabled="true"
        android:icon="@drawable/chat_text_thin_icon_171897"
        android:title="@string/community" />

    <item android:id="@+id/mypage"
        android:enabled="true"
        android:icon="@drawable/user_thin_icon_171437"
        android:title="@string/mypage" />

</menu>