<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- 타이틀명과 버튼 레이아웃 시작 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registerStoreName"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/lightGray"
            android:text="@string/registerBtn"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </FrameLayout>

    <!-- 타이틀명과 버튼 레이아웃 끝 -->

    <!-- main 기능 레이아웃-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:backgroundTint="@color/lightGray"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:layout_gravity="left"
            >

            <ImageButton
                android:id="@+id/ImagePlusCamera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/camera_light"
                android:layout_margin="10dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/btn_round"
            android:drawableLeft="@drawable/category_bold"
            android:text="@string/categoryButton"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            >
            <ImageView
                android:id="@+id/price"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/price"
                android:layout_gravity="left|center"
                />

            <EditText
                android:id="@+id/priceText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:hint="판매가격 설정"
                android:paddingRight="30dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/titleWrite"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/bottom_border"
            android:hint="@string/registerTitle"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/contentWrite"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_border"
            android:padding="10dp"
            android:hint="@string/registerContent"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>
