<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- 타이틀명과 버튼 레이아웃 시작 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registerName"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/lightGray"
            android:text="@string/registerBtn"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </FrameLayout>

    <!-- 타이틀명과 버튼 레이아웃 끝 -->

    <!-- main 기능 레이아웃-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:backgroundTint="@color/lightGray"
        android:padding="20dp">

        <EditText
            android:id="@+id/titleWrite"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/bottom_border"
            android:hint="@string/registerTitle"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/contentWrite"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_border"
            android:padding="10dp"
            android:hint="@string/registerContent"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/ImagePlus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            >

            <ImageButton
                android:id="@+id/ImagePlusCamera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left|center"
                android:background="@drawable/camera"
                />

            <TextView
                android:id="@+id/cameraButtonText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="이미지 업로드"
                android:textSize="20sp"
                android:textColor="#BFBFBF"
                android:gravity="left|center"
                android:paddingLeft="30dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            >

            <ImageButton
                android:id="@+id/category"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left|center"
                android:background="@drawable/category"
                />

            <TextView
                android:id="@+id/categoryButtonText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="카테고리 설정"
                android:textSize="20sp"
                android:textColor="#BFBFBF"
                android:gravity="left|center"
                android:paddingLeft="30dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
